# DetectLlama

./: .env.sample  .gitignore  CMakeLists.txt  README.md  build.sh  run.sh
include/: app_config.h  backend.h  detect.h  hardware_profile.h  io.h  llama_logging.h  llama_state.h  model_catalog.h  model_manager.h  signals.h  tui.h  utils.h
scripts/: build.sh  download-model.sh  run.sh
src/: backend.cpp  backend_cli.cpp  console.cpp  detect.cpp  hardware_profile.cpp  io.cpp  llama_logging.cpp  llama_state.cpp  main.cpp  model_catalog.cpp  model_manager.cpp  signals.cpp  tui.cpp
